Finished building and implementing smooth scroll

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
 
         <div class="nav-links">
-            <a href="#home">Home</a>
-            <a href="#pricing">Pricing</a>
+            <a href="#automation">Automation</a>
             <a href="#about">About</a>
+            <a href="#testing">Testing</a>
         </div>
 
         <div class="nav-buttons">
@@ -30,30 +30,29 @@
         </div>
     </nav>
 
-    <!-- Home Section -->
-    <section id="home" class="home-section">
-        <div class="home-text-container">
+    <!-- Automation Section -->
+    <section id="automation" class="automation-section">
+        <div class="automation-text-container">
             <h2>Online Selenium Test Automation on Desktop, Android, and iOS Mobile Browsers</h2>
 
             <p>Run your Selenium test automation scripts across online Selenium Grid of desktop, Android and iOS mobile browsers. Develop, test, and deliver faster every time with automated cross browser testing using LambdaTest online Automation Browser Testing Grid.</p>
 
-            <button>Get Started</button>
+            <button>Get Started <i class="fa fa-arrow-right"></i></button>
         </div>
 
-        <div class="home-image-container">
+        <div class="automation-image-container">
             <img src="./Automation.png" alt="Automation">
         </div>
     </section>
 
     <!-- About Section 2 -->
-    <section id="about-section" class="about-section">
+    <section id="about" class="about-section">
         <div class="about-text-section">
             <h2>More Reasons To Love LambdaTest</h2>
             <p>Along with 3000+ browsers and devices combinations to test we provide you additional features to make sure you give your users a perfect experience.</p>
         </div>
 
         <div class="grid">
-            <!-- Support -->
             <div class="grid-card">
                 <div class="card-image-container">
                     <img src="./headset.svg" alt="headset">
@@ -89,9 +88,19 @@
         </div>
     </section>
 
-    <!-- Section 3 -->
-    <section id="section3" class="section3">
-        
+    <!-- Testing -->
+    <section id="testing" class="testing-section">
+        <div class="testing-text-container">
+            <h2>Real Device Cloud for Reliable Mobile App Testing</h2>
+
+            <p>Test your native hybrid of web mobile apps using LambdaTest’s online real device cloud and virtual mobile device platform of emulators and simulators. Eliminating your in-house device labs and bring high scalability to your mobile app testing.</p>
+
+            <button>See More <i class="fa fa-arrow-right"></i></button>
+        </div>
+
+        <div class="testing-image-container">
+            <img src="./mobile-app-testing.png" alt="Mobile App Testing">
+        </div>
     </section>
 </body>
 </html>
