Added few changes

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <!-- Navigation Menu -->
     <nav>
-        <div class="logo-container">
-            <img src="./logo.svg" alt="Logo">
-        </div>
+        <a href="https://www.lambdatest.com/">
+            <div class="logo-container">
+                <img src="https://www.lambdatest.com/resources/images/logos/logo.svg" alt="Logo">
+            </div>
+        </a>
 
         <div class="menu-bar">
             <i class="fa fa-bars fa-2x" style="color: black;"></i>
@@ -41,7 +43,7 @@
         </div>
 
         <div class="automation-image-container">
-            <img src="./Automation.png" alt="Automation">
+            <img src="https://www.lambdatest.com/resources/images/selenium-parallel-testing-index.png" alt="Automation">
         </div>
     </section>
 
@@ -55,7 +57,7 @@
         <div class="grid">
             <div class="grid-card">
                 <div class="card-image-container">
-                    <img src="./headset.svg" alt="headset">
+                    <img src="https://www.lambdatest.com/resources/images/headset.svg" alt="headset">
                 </div>
 
                 <div class="card-text-container">
@@ -66,7 +68,7 @@
 
             <div class="grid-card">
                 <div class="card-image-container">
-                    <img src="./Integration-logo.svg" alt="headset">
+                    <img src="https://www.lambdatest.com/resources/images/Integration-logo.svg" alt="Integration">
                 </div>
 
                 <div class="card-text-container">
@@ -77,7 +79,7 @@
 
             <div class="grid-card">
                 <div class="card-image-container">
-                    <img src="./LambdaTest-Documentation.svg" alt="headset">
+                    <img src="https://www.lambdatest.com/resources/images/header/LambdaTest-Documentation.svg" alt="Documentation">
                 </div>
 
                 <div class="card-text-container">
@@ -99,7 +101,7 @@
         </div>
 
         <div class="testing-image-container">
-            <img src="./mobile-app-testing.png" alt="Mobile App Testing">
+            <img src="https://www.lambdatest.com/resources/images/mobile-app-testing.png" alt="Mobile App Testing">
         </div>
     </section>
 </body>
